Added Pokémon habitats.
